Disable translate-readme workflow for tag pushes

--- a/.github/workflows/translate-readme.yml
+++ b/.github/workflows/translate-readme.yml
@@ -2,8 +2,12 @@ name: Translate README
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'README.md'
+    tags-ignore:
+      - '**'
   workflow_dispatch:
 
 jobs:
