Fix immutable release error by using draft releases

--- a/.github/workflows/build-with-updater.yml
+++ b/.github/workflows/build-with-updater.yml
@@ -95,7 +95,7 @@ jobs:
           tagName: ${{ github.ref_name }}
           releaseName: 'FinceptTerminal ${{ github.ref_name }}'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: false
+          releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
           includeUpdaterJson: true
