feat: add cross-platform Python runtime fetching and installation
- Introduced a new script to fetch and install a standalone Python runtime for macOS and Linux.
- Updated CI/CD workflow to include steps for fetching the Python runtime and installing required packages based on the platform.
- Enhanced Rust code to support loading the correct Python executable from bundled resources for macOS and Linux.

This improves the application's ability to run Python scripts across different operating systems.

--- a/.github/workflows/build-with-updater.yml
+++ b/.github/workflows/build-with-updater.yml
@@ -84,6 +84,26 @@ jobs:
         run: npm install
         working-directory: ./fincept-terminal-desktop
 
+      - name: Fetch bundled Python runtime (macOS/Linux)
+        if: matrix.platform != 'windows-latest'
+        run: ./scripts/fetch-python-runtime.sh
+        env:
+          TARGET_ARCH: ${{ matrix.arch }}
+        shell: bash
+        working-directory: ./fincept-terminal-desktop
+
+      - name: Install Python packages for bundled Python
+        run: |
+          if [ "${{ matrix.platform }}" == "windows-latest" ]; then
+            ./src-tauri/resources/python-windows/python.exe -m pip install -r ./src-tauri/resources/requirements.txt
+          elif [ "${{ matrix.platform }}" == "macos-latest" ]; then
+            ./src-tauri/resources/python-macos/python/bin/python3 -m pip install -r ./src-tauri/resources/requirements.txt
+          elif [ "${{ matrix.platform }}" == "ubuntu-22.04" ]; then
+            ./src-tauri/resources/python-linux/python/bin/python3 -m pip install -r ./src-tauri/resources/requirements.txt
+          fi
+        shell: bash
+        working-directory: ./fincept-terminal-desktop
+
       - name: Build the app with updater
         uses: tauri-apps/tauri-action@v0
         env:
