--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -11,6 +11,9 @@
     "bump-version": "node scripts/bump-version.js"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@langchain/community": "^0.3.56",
     "@langchain/ollama": "^0.2.4",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -54,7 +57,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dexie": "^4.2.0",
     "embla-carousel-react": "^8.6.0",
     "fyers-web-sdk-v3": "^1.3.1",
     "jmespath": "^0.16.0",
@@ -93,6 +95,7 @@
     "@types/react-dom": "^19.1.6",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.6.0",
+    "baseline-browser-mapping": "^2.8.32",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
