--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.6",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
