fix: add nix crate dependency and disable macOS builds temporarily

--- a/.github/workflows/build-with-updater.yml
+++ b/.github/workflows/build-with-updater.yml
@@ -12,16 +12,17 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest'
-            args: '--target aarch64-apple-darwin'
-            os_name: 'macOS'
-            arch: 'arm64'
-            target: 'aarch64-apple-darwin'
-          - platform: 'macos-latest'
-            args: '--target x86_64-apple-darwin'
-            os_name: 'macOS'
-            arch: 'x64'
-            target: 'x86_64-apple-darwin'
+          # macOS builds disabled - PyOxidizer SDK compatibility issue
+          # - platform: 'macos-latest'
+          #   args: '--target aarch64-apple-darwin'
+          #   os_name: 'macOS'
+          #   arch: 'arm64'
+          #   target: 'aarch64-apple-darwin'
+          # - platform: 'macos-latest'
+          #   args: '--target x86_64-apple-darwin'
+          #   os_name: 'macOS'
+          #   arch: 'x64'
+          #   target: 'x86_64-apple-darwin'
           - platform: 'ubuntu-22.04'
             args: '--target x86_64-unknown-linux-gnu'
             os_name: 'Linux'
