--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "bump-version": "node scripts/bump-version.js"
+    "tauri:dev": "bun run tauri dev",
+    "tauri:build": "bun run tauri build",
+    "bump-version": "bun scripts/bump-version.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -51,7 +53,9 @@
     "@tauri-apps/plugin-sql": "^2.3.0",
     "@tauri-apps/plugin-updater": "~2.9.0",
     "@types/react-grid-layout": "^1.3.5",
+    "anychart": "^8.14.0",
     "axios": "^1.12.2",
+    "better-sqlite3": "^12.5.0",
     "ccxt": "^4.5.24",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
@@ -75,6 +79,7 @@
     "otpauth": "^9.4.1",
     "otplib": "^12.0.1",
     "playwright": "^1.55.1",
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-day-picker": "^9.11.0",
@@ -84,6 +89,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.6",
     "reactflow": "^11.11.4",
+    "readable-stream": "^4.7.0",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
@@ -91,6 +97,9 @@
     "tailwindcss": "^4.1.13",
     "vaul": "^1.1.2",
     "ws": "^8.18.3"
+  },
+  "resolutions": {
+    "readable-stream": "4.7.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
@@ -111,11 +120,13 @@
     "socks-proxy-agent": "^8.0.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "url": "^0.11.4",
     "util": "^0.12.5",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
