--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -19,7 +19,7 @@ jobs:
             os_name: 'macOS'
             arch: 'x64'
             target: 'x86_64-apple-darwin'
-          - platform: 'ubuntu-20.04'
+          - platform: 'ubuntu-latest'
             args: '--target x86_64-unknown-linux-gnu'
             os_name: 'Linux'
             arch: 'x64'
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -140,7 +140,7 @@ jobs:
 
             find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.dmg" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.dmg \; 2>/dev/null && echo "[OK] Found .dmg" || echo "[WARN] No .dmg found"
 
-          elif [[ "${{ matrix.platform }}" == "ubuntu-20.04" ]]; then
+          elif [[ "${{ matrix.platform }}" == "ubuntu-latest" ]]; then
             # Linux builds
             SUFFIX="Linux-x64"
             find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.AppImage" -exec cp {} release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.AppImage \; 2>/dev/null && echo "[OK] Found .AppImage" || echo "[WARN] No .AppImage found"
