--- a/fincept-terminal-desktop/src-tauri/resources/requirements.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements.txt
@@ -46,3 +46,7 @@ zstandard==0.25.0
 jinja2==3.1.3
 weasyprint==62.3
 matplotlib==3.9.3
+# LLM Provider Packages (for finagent_core)
+openai==2.8.1
+anthropic==0.71.0
+google-generativeai==0.8.5
