--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -42,13 +42,13 @@ jobs:
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
+          # Install webkit2gtk - try 4.1 first (Ubuntu 22.04+), fall back to 4.0 (Ubuntu 20.04)
+          sudo apt-get install -y libwebkit2gtk-4.1-dev || sudo apt-get install -y libwebkit2gtk-4.0-dev
+          sudo apt-get install -y libjavascriptcoregtk-4.1-dev || sudo apt-get install -y libjavascriptcoregtk-4.0-dev
+          # Install soup - try 3.0 first (newer), fall back to 2.4 (older)
+          sudo apt-get install -y libsoup-3.0-dev || sudo apt-get install -y libsoup2.4-dev
+          # Install remaining dependencies
           sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libwebkit2gtk-4.0-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libjavascriptcoregtk-4.0-dev \
-            libsoup-3.0-dev \
-            libsoup2.4-dev \
             build-essential \
             curl \
             wget \
