--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -46,6 +46,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tauri-apps/api": "~2.9.0",
     "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-http": "^2.5.2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-process": "^2.3.1",
@@ -64,6 +65,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "fyers-web-sdk-v3": "^1.3.1",
+    "handsontable": "^16.2.0",
+    "hyperformula": "^3.1.1",
     "i18next": "^25.7.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
@@ -96,7 +99,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "vaul": "^1.1.2",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "readable-stream": "4.7.0"
