--- a/fincept-terminal-desktop/src-tauri/resources/requirements.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements.txt
@@ -17,8 +17,8 @@ gnews==0.4.2
 idna==3.11
 multidict==6.7.0
 multitasking==0.0.12
-numpy==1.26.4
-pandas==2.3.3
+numpy>=1.26.4,<3.0
+pandas>=2.3.3,<3.0
 vectorbt==0.28.2
 backtesting==0.6.5
 # fast-trade==1.0.2  # Commented out - not tested with Python 3.12, use backtesting.py instead
@@ -45,8 +45,63 @@ yfinance==0.2.66
 zstandard==0.25.0
 jinja2==3.1.3
 weasyprint==62.3
-matplotlib==3.9.3
+matplotlib>=3.9.3,<4.0
 # LLM Provider Packages (for finagent_core)
-openai==2.8.1
-anthropic==0.71.0
-google-generativeai==0.8.5
+openai>=2.8.1,<3.0
+anthropic>=0.71.0,<1.0
+google-generativeai>=0.8.5,<1.0
+
+# AI Quant Lab - Qlib and RD-Agent
+pyqlib==0.9.7
+rdagent==0.8.0
+
+# Qlib core dependencies
+cvxpy>=1.0.0
+dill>=0.3.0
+fire>=0.4.0
+gym>=0.26.0
+jupyter>=1.0.0
+loguru>=0.6.0
+mlflow>=2.0.0
+nbconvert>=7.0.0
+pydantic-settings>=2.0.0
+python-redis-lock>=4.0.0
+ruamel.yaml>=0.17.38
+
+# RD-Agent core dependencies
+langchain>=0.1.0
+langchain-community>=0.0.1
+litellm>=1.73
+nbformat>=5.0.0
+pandarallel>=1.6.0
+rich>=13.0.0
+seaborn>=0.12.0
+selenium>=4.0.0
+setuptools-scm>=8.0.0
+streamlit>=1.47
+tiktoken>=0.5.0
+typer>=0.9.0
+tables>=3.8.0
+
+# ML/DL libraries for Qlib
+lightgbm>=4.0.0
+xgboost>=2.0.0
+catboost>=1.2.0
+torch>=2.0.0
+scikit-learn>=1.3.0
+scipy>=1.10.0
+
+# Optional RD-Agent dependencies (Azure, Kaggle)
+# Uncomment if needed:
+# azure-ai-formrecognizer
+# azure-ai-inference
+# azure-identity
+# azureml-mlflow
+# humanize
+# kaggle
+# prefect
+# pydantic-ai-slim
+# python-levenshtein
+# randomname
+# st-theme
+# webdriver-manager
