--- a/fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt
@@ -1,73 +1,123 @@
-# Python Environment 1: NumPy 1.x Compatible Libraries
-# For older finance libraries that don't support NumPy 2.x yet
+# NumPy 1.x Environment - Legacy Finance Libraries
+# For libraries that don't support NumPy 2.x yet
 
 # Core dependencies
-numpy>=1.26.4,<2.0  # NumPy 1.x for compatibility
-pandas>=2.0.0,<2.3.0  # Older pandas versions work better with NumPy 1.x
+numpy>=1.26.4,<2.0
+pandas>=2.0.0,<2.3.0
 
-# Time series and forecasting (NumPy 1.x dependent)
-gluonts[torch]==0.16.2  # Requires numpy<2.2
+# Data fetching
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+attrs==25.4.0
+beautifulsoup4==4.14.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+curl_cffi==0.13.0
+databento==0.66.0
+databento-dbn==0.44.0
+dnspython==2.8.0
+feedparser==6.0.12
+frozendict==2.4.7
+frozenlist==1.8.0
+gnews==0.4.2
+idna==3.11
+multidict==6.7.0
+multitasking==0.0.12
+pip_system_certs==5.3
+platformdirs==4.5.0
+propcache==0.4.1
+protobuf>=3.20.2,<6.0.0
+pyarrow==22.0.0
+pycparser==2.23
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.5
+sgmllib3k==1.0.0
+six==1.17.0
+soupsieve==2.8
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+websockets==15.0.1
+yarl==1.22.0
+yfinance==0.2.66
+zstandard==0.25.0
+
+# Backtesting and trading (NumPy 1.x dependent)
+vectorbt==0.28.2
+backtesting==0.6.5
+
+# Time series and forecasting
+gluonts[torch]==0.16.2
 statsmodels==0.14.6
 pmdarima==2.1.1
 functime==0.1.10
-
-# Backtesting and trading
-vectorbt==0.28.2
-backtesting==0.6.5
+tsmoothie==1.0.5
 
 # Technical analysis
 ta==0.11.0
 talipp==2.7.0
-tsmoothie==1.0.5
 
 # Financial modeling
 py_vollib==1.0.1
 pypme==0.6.2
-
-# Portfolio optimization (may need NumPy 1.x)
-PyPortfolioOpt==1.5.6
-finquant-enhanced
-
-# Quantitative finance
 financepy==1.0.1
 ffn==1.1.2
 fortitudo.tech==1.2
-
-# Fixed income
 rateslib==2.1.1
 
-# Data fetching
-yfinance==0.2.66
-databento==0.66.0
-databento-dbn==0.44.0
-
-# Core utilities
-beautifulsoup4==4.14.2
-feedparser==6.0.12
-gnews==0.4.2
-requests==2.32.5
-aiohttp==3.13.2
-websockets==15.0.1
-protobuf>=3.20.2,<6.0.0
-pyarrow==22.0.0
+# Portfolio optimization
+PyPortfolioOpt==1.5.6
+finquant-enhanced
+cvxpy>=1.0.0
+cvxopt==1.3.2
 
 # Visualization
-matplotlib>=3.8.0,<3.10.0  # Compatible with NumPy 1.x
+matplotlib>=3.8.0,<3.10.0
 plotly==6.5.0
 seaborn>=0.12.0
+jinja2==3.1.3
+weasyprint==62.3
 
-# ML libraries (NumPy 1.x compatible versions)
+# ML libraries (NumPy 1.x compatible)
 scikit-learn>=1.3.0,<1.6.0
 scipy>=1.10.0,<1.15.0
 lightgbm>=4.0.0,<5.0.0
 xgboost>=2.0.0,<2.2.0
 catboost>=1.2.0,<1.3.0
 
-# Optimization
-cvxpy>=1.0.0
-cvxopt==1.3.2
-
-# Qlib and RD-Agent (may need NumPy 1.x)
+# Qlib and RD-Agent
 pyqlib==0.9.7
 rdagent==0.8.0
 mlflow>=2.0.0
+dill>=0.3.0
+fire>=0.4.0
+gym>=0.26.0
+jupyter>=1.0.0
+loguru>=0.6.0
+nbconvert>=7.0.0
+pydantic-settings>=2.0.0
+python-redis-lock>=4.0.0
+ruamel.yaml>=0.17.38
+nbformat>=5.0.0
+pandarallel>=1.6.0
+rich>=13.0.0
+selenium>=4.0.0
+setuptools-scm>=8.0.0
+streamlit>=1.47
+tiktoken>=0.5.0
+typer>=0.9.0
+tables>=3.8.0
+
+# LLM/AI
+langchain>=0.1.0
+langchain-community>=0.0.1
+litellm>=1.73
+
+# Database
+peewee>=3.17.0,<3.18.0
+
+# Quant finance
+gs-quant==1.4.67
