setup process updated

--- a/fincept-terminal-desktop/src-tauri/resources/requirements-numpy2.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements-numpy2.txt
@@ -5,7 +5,7 @@
 numpy>=2.2.3,<3.0
 pandas>=2.3.3,<3.0
 
-# Trading platform (requires NumPy 2.x)
+# Trading platform (requires NumPy 2.2+)
 vnpy==4.3.0
 
 # Data fetching
@@ -14,6 +14,11 @@ aiohttp==3.13.2
 websockets==15.0.1
 beautifulsoup4==4.14.2
 protobuf>=3.20.2,<6.0.0
+yfinance==0.2.66
+databento==0.66.0
+databento-dbn==0.44.0
+feedparser==6.0.12
+gnews==0.4.2
 
 # SEC EDGAR data
 edgartools>=5.6.0
@@ -28,11 +33,49 @@ litellm>=1.73
 tiktoken>=0.5.0
 
 # ML/DL (NumPy 2.x compatible)
-torch>=2.0.0
+torch>=2.3.1
+scikit-learn>=1.4.2,<1.7.0
+scipy>=1.13.0,<1.16.0
+lightgbm>=4.6.0,<5.0.0
+xgboost>=2.1.0,<2.2.0
+catboost>=1.2.0,<1.3.0
+
+# Time series and forecasting (NumPy 2.x compatible)
+statsmodels>=0.14.2
+pmdarima>=2.1.1
+
+# Technical analysis
+ta==0.11.0
+talipp==2.7.0
+
+# Portfolio optimization
+# Note: PyPortfolioOpt moved to NumPy 1.x due to plotly<6.0.0 requirement
+finquant-enhanced
+cvxpy>=1.0.0
+cvxopt==1.3.2
+
+# Financial modeling
+py_vollib==1.0.1
+pypme==0.6.2
+# financepy moved to NumPy 1.x (requires old numba incompatible with Python 3.12)
+ffn==1.1.2
+fortitudo.tech==1.2
+rateslib==2.1.1
+
+# Quant libraries
+pyqlib==0.9.7
+rdagent==0.8.0
+gs-quant==1.4.67
+
+# Time series (additional)
+tsmoothie==1.0.5
 
 # Visualization
-plotly==6.5.0
+plotly>=6.0.0
 matplotlib>=3.9.3,<4.0
+seaborn>=0.12.0
+jinja2==3.1.3
+weasyprint==62.3
 
 # Development tools
 jupyter>=1.0.0
@@ -52,3 +95,41 @@ python-redis-lock>=4.0.0
 setuptools-scm>=8.0.0
 tables>=3.8.0
 selenium>=4.0.0
+pyarrow>=16.0.0
+
+# Database
+peewee>=3.17.0,<3.18.0
+
+# MLflow
+mlflow>=2.0.0
+
+# Additional data utilities
+aiohappyeyeballs==2.6.1
+aiosignal==1.4.0
+attrs==25.4.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+curl_cffi==0.13.0
+dnspython==2.8.0
+frozendict==2.4.7
+frozenlist==1.8.0
+idna==3.11
+multidict==6.7.0
+multitasking==0.0.12
+pip_system_certs==5.3
+platformdirs==4.5.0
+propcache==0.4.1
+pycparser==2.23
+python-dateutil==2.9.0.post0
+pytz==2025.2
+sgmllib3k==1.0.0
+six==1.17.0
+soupsieve==2.8
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+yarl==1.22.0
+zstandard==0.25.0
+pandarallel>=1.6.0
+gym>=0.26.0
