--- a/fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt
@@ -76,7 +76,7 @@ cvxopt==1.3.2
 
 # Visualization
 matplotlib>=3.8.0,<3.10.0
-plotly==6.5.0
+plotly>=5.18.0,<6.0.0
 seaborn>=0.12.0
 jinja2==3.1.3
 weasyprint==62.3
