Fix macOS installation issues for Intel and Apple Silicon
This commit resolves several installation errors on macOS:

1. **UV executable path detection**: Added fallback logic to check multiple
   candidate paths and use `python -m uv` if binary not found

2. **LLVM dependency**: Automated installation via Homebrew for llvmlite/numba
   compilation. Pinned llvmlite==0.43.0 and numba==0.60.0 for pre-built wheels

3. **TA-Lib dependency**: Automated installation via Homebrew for vnpy's
   ta-lib Python wrapper with proper environment variables

4. **PyTorch compatibility**: Added conditional requirements to use PyTorch
   2.2.2 on macOS Intel (x86_64) as 2.3.1+ only supports ARM64

5. **Safari regex compatibility**: Downgraded remark-gfm from v4 to v3 to
   fix regex errors in markdown rendering

All changes maintain compatibility with Windows and Linux while ensuring
proper functionality on both Intel and Apple Silicon Macs.

--- a/fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements-numpy1.txt
@@ -63,6 +63,9 @@ talipp==2.7.0
 # Financial modeling
 py_vollib==1.0.1
 pypme==0.6.2
+# Use specific llvmlite/numba versions with pre-built wheels for macOS
+llvmlite==0.43.0
+numba==0.60.0
 financepy==1.0.1
 ffn==1.1.2
 fortitudo.tech==1.2
