--- a/fincept-terminal-desktop/src-tauri/resources/requirements-numpy2.txt
+++ b/fincept-terminal-desktop/src-tauri/resources/requirements-numpy2.txt
@@ -33,7 +33,9 @@ litellm>=1.73
 tiktoken>=0.5.0
 
 # ML/DL (NumPy 2.x compatible)
-torch>=2.3.1
+# PyTorch 2.3.1+ doesn't support macOS Intel, use 2.2.2 for compatibility
+torch==2.2.2; platform_machine == "x86_64" and sys_platform == "darwin"
+torch>=2.3.1; platform_machine != "x86_64" or sys_platform != "darwin"
 scikit-learn>=1.4.2,<1.7.0
 scipy>=1.13.0,<1.16.0
 lightgbm>=4.6.0,<5.0.0
