--- a/fincept-terminal-desktop/src-tauri/Cargo.toml
+++ b/fincept-terminal-desktop/src-tauri/Cargo.toml
@@ -79,6 +79,7 @@ futures = "0.3"
 pin-project = "1.1"
 regex = "1.12.2"
 rayon = "1.11.0"
+quick-xml = "0.37"  # Fast XML/RSS parsing
 
 [target.'cfg(target_os = "windows")'.dependencies]
 [target.'cfg(target_os = "macos")'.dependencies]
