--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -76,6 +76,7 @@
     "jsonpath": "^1.1.1",
     "jsonpath-plus": "^10.3.0",
     "langchain": "^0.3.34",
+    "libphonenumber-js": "^1.12.33",
     "lightweight-charts": "^5.0.9",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
@@ -92,6 +93,7 @@
     "react-grid-layout": "^1.5.2",
     "react-i18next": "^16.3.5",
     "react-markdown": "^10.1.0",
+    "react-phone-number-input": "^3.4.14",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "reactflow": "^11.11.4",
