--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -11,22 +11,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'macos-latest'
+          - platform: 'macos-14'
             args: '--target aarch64-apple-darwin'
             os_name: 'macOS'
             arch: 'arm64'
             target: 'aarch64-apple-darwin'
-          - platform: 'macos-latest'
+          - platform: 'macos-13'
             args: '--target x86_64-apple-darwin'
             os_name: 'macOS'
             arch: 'x64'
             target: 'x86_64-apple-darwin'
-          - platform: 'ubuntu-20.04'
+          - platform: 'ubuntu-22.04'
             args: '--target x86_64-unknown-linux-gnu'
             os_name: 'Linux'
             arch: 'x64'
             target: 'x86_64-unknown-linux-gnu'
-          - platform: 'windows-latest'
+          - platform: 'windows-2022'
             args: '--target x86_64-pc-windows-msvc'
             os_name: 'Windows'
             arch: 'x64'
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev || sudo apt-get install -y libwebkit2gtk-4.0-dev
@@ -126,14 +126,14 @@ jobs:
             ARTIFACT=$(find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.dmg" -type f 2>/dev/null | head -1)
             [ -f "$ARTIFACT" ] && cp "$ARTIFACT" "release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.dmg" || { echo "Error: DMG not found"; exit 1; }
 
-          elif [[ "${{ matrix.platform }}" == "ubuntu-20.04" ]]; then
+          elif [[ "${{ matrix.platform }}" == "ubuntu-22.04" ]]; then
             SUFFIX="Linux-x64"
             APPIMAGE=$(find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.AppImage" -type f 2>/dev/null | head -1)
             DEB=$(find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.deb" -type f 2>/dev/null | head -1)
             [ -f "$APPIMAGE" ] && cp "$APPIMAGE" "release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.AppImage" || { echo "Error: AppImage not found"; exit 1; }
             [ -f "$DEB" ] && cp "$DEB" "release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.deb" || echo "Warning: DEB not found"
 
-          elif [[ "${{ matrix.platform }}" == "windows-latest" ]]; then
+          elif [[ "${{ matrix.platform }}" == "windows-2022" ]]; then
             SUFFIX="Windows-x64"
             MSI=$(find fincept-terminal-desktop/src-tauri/target/${{ matrix.target }}/release/bundle -name "*.msi" -type f 2>/dev/null | head -1)
             [ -f "$MSI" ] && cp "$MSI" "release-artifacts/FinceptTerminal-v${VERSION}-${SUFFIX}.msi" || { echo "Error: MSI not found"; exit 1; }
