Update runners and fix memory limits

--- a/fincept-terminal-desktop/package.json
+++ b/fincept-terminal-desktop/package.json
@@ -6,7 +6,7 @@
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 tsc && cross-env NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "bun run tauri dev",
@@ -123,6 +123,7 @@
     "baseline-browser-mapping": "^2.8.32",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "cross-env": "^10.1.0",
     "http-proxy-agent": "^7.0.2",
     "https-browserify": "^1.0.0",
     "https-proxy-agent": "^7.0.6",
