--- a/.github/workflows/release-production.yml
+++ b/.github/workflows/release-production.yml
@@ -16,7 +16,7 @@ jobs:
             os_name: 'macOS'
             arch: 'arm64'
             target: 'aarch64-apple-darwin'
-          - platform: 'macos-13'
+          - platform: 'macos-15-intel'
             args: '--target x86_64-apple-darwin'
             os_name: 'macOS'
             arch: 'x64'
@@ -102,6 +102,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+          NODE_OPTIONS: --max-old-space-size=6144
         with:
           projectPath: fincept-terminal-desktop
           tagName: ${{ github.ref_name }}
